[metadata]
name = miyadaiku_theme_newblog
version = attr: miyadaiku_theme_newblog.__version__
url = https://miyadaiku.github.io/miyadaiku-theme-newblog
author = Atsuo Ishimoto
description = Newly designed blog site for miyadaiku miyadaiku static site generator
long_description = file: README.rst
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

project_urls =
    Documentation = https://miyadaiku.github.io/
    Source = https://miyadaiku.github.io/miyadaiku-theme-jquery

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false

setup_requires =
    wheel
    setuptools-git

install_requires =
    miyadaiku>=1.5.0
    miyadaiku_theme_bootstrap4
    miyadaiku_theme_fontawesome

[options.extras_require]
dev =
    wheel
    twine
    pytest
    mypy
    black
    flake8
    autoflake

